# pollen

./: .editorconfig  .gitignore  AGENTS.md  Cargo.toml  README.md  diesel.toml  justfile  ruleset.ron
.github/: Containerfile
.github/workflows/: cd.yml  ci.yml
.workhorse/: rules.md
.workhorse/specs/wizard/: onboarding.md  ruleset.md
crates/pollen-server/: Cargo.toml  build.rs
crates/pollen-server/src/: config.rs  error.rs  lib.rs  main.rs  openapi.rs  production.rs  server.rs  spa.rs  state.rs
crates/pollen-server/src/db/: applications.rs  config_store.rs  mod.rs  schema.rs
crates/pollen-server/src/fns/: applications.rs  meta.rs  mod.rs
crates/pollen-server/src/ruleset/: answers.rs  condition.rs  engine.rs  migrate.rs  mod.rs  model.rs  normalize.rs  resolver.rs  source.rs
crates/pollen-server/tests/: applications.rs  db.rs  production.rs  ruleset.rs
crates/pollen-server/tests/common/: mod.rs
docs/plans/: onboarding-wizard.md
migrations/2026-06-26-065208-0000_applications/: down.sql  up.sql
ruleset/: v1.ron
scripts/: ramdisk-pg.sh
web/: .npmrc  index.html  openapi.json  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  tsconfig.node.json  vite.config.ts
web/e2e/: fixture.ts  test-fixtures.ts  wizard.spec.ts
web/src/: App.tsx  api-types.ts  api.ts  app.css  main.tsx  markup.tsx  recentPlans.ts  theme.ts  types.ts  vite-env.d.ts
web/src/components/: Artifact.tsx  Wizard.tsx  visuals.tsx
web/src/routes/: ApplicationPage.tsx  NewApplication.tsx
