[workspace]
resolver = "3"
members = ["crates/pollen-server"]

[workspace.package]
edition = "2024"
license = "GPL-3.0-or-later"
authors = [
	"Félix Saparelli <felix@passcod.name>",
	"BES Developers <contact@bes.au>",
]

[workspace.dependencies]
axum = { version = "0.8.9", features = ["json", "macros"] }
axum-test = "20.0.0"
clap = { version = "4.6.1", features = ["derive", "env"] }
diesel = { version = "2.3.9", features = ["postgres_backend", "serde_json", "uuid"] }
diesel-async = { version = "0.9.0", features = ["mobc", "postgres", "migrations", "async-connection-wrapper"] }
diesel-derive-enum = { version = "2.1.0", features = ["postgres"] }
diesel_migrations = "2.3.2"
hex = "0.4.3"
http = "1.4.0"
jiff = { version = "0.2.24", features = ["serde"] }
jiff-diesel = { version = "0.1.3", features = ["postgres"] }
lloggs = { version = "1.4.0", features = ["miette-7"] }
miette = { version = "7.6.0", features = ["fancy"] }
mime_guess = "2.0.5"
mobc = "0.9.0"
problem_details = { version = "0.9.0", features = ["serde", "axum"] }
reqwest = { version = "0.13.3", default-features = false, features = ["json", "rustls"] }
ron = "0.12.2"
rust-embed = { version = "8.11.0", features = ["interpolate-folder-path"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.11.0"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["macros", "net", "rt-multi-thread", "signal"] }
tower-http = { version = "0.6.11", features = ["trace", "compression-gzip"] }
tracing = "0.1.44"
utoipa = { version = "5", features = ["uuid", "axum_extras", "jiff_0_2"] }
utoipa-axum = "0.2"
utoipa-swagger-ui = { version = "9", default-features = false, features = ["axum", "vendored"] }
uuid = { version = "1.23.1", features = ["serde", "v4"] }

[profile.release]
lto = true
codegen-units = 1
strip = "symbols"
