[package]
publish = false
name = "pollen-server"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
axum.workspace = true
clap.workspace = true
http.workspace = true
lloggs.workspace = true
miette.workspace = true
mime_guess.workspace = true
problem_details.workspace = true
rust-embed.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
utoipa.workspace = true
utoipa-axum.workspace = true
utoipa-swagger-ui.workspace = true
